# snts_collectmind

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .syft.yaml  .trivyignore  404.html  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.specify/: extensions.yml
assets/: _baseUniq-B4iQh-5O.js  arc-z8qxbl9y.js  architectureDiagram-UYN6MBPD-17Ht18-H.js  blockDiagram-ZHA2E4KO-ju_ARWOp.js  c4Diagram-6F5ED5ID-ClOgQW7V.js  channel-4hiYge3U.js  chunk-5HRBRIJM-BKRNCAZG.js  chunk-7U56Z5CX-rdDOyuBl.js  chunk-ASOPGD6M-toFkKwlr.js  chunk-KFBOBJHC-CZU7GRnW.js  chunk-T2TOU4HS-nt6FgA8v.js  chunk-TMUBEWPD-BtU6wq_q.js  classDiagram-LNE6IOMH-B6gN67hs.js  clone-BRDX6xKo.js  dagre-4EVJKHTY-htqHVaYC.js  diagram-QW4FP2JN-SpIdhNEP.js  erDiagram-6RL3IURR-DTja1xI9.js  flowDiagram-7ASYPVHJ-DBVN5V3W.js  ganttDiagram-NTVNEXSI-C84LLX1e.js  gitGraph-YCYPL57B-V_Uwqq4T.js  gitGraphDiagram-NRZ2UAAF-D7nhV5ag.js  graph-Bra7HCN9.js  index-BY_nQr3o.js  index-BylhE8wa.css  infoDiagram-A4XQUW5V-DlIdUtB7.js  journeyDiagram-G5WM74LC-DYARfphx.js  kanban-definition-QRCXZQQD-LfosORaK.js  layout-BRh_ki7W.js  linear-JwbWUkOE.js  min-u5-rSkJD.js  mindmap-definition-GWI6TPTV-B0TKBv8A.js  pieDiagram-YF2LJOPJ-CXbLfAiK.js  quadrantDiagram-OS5C2QUG-CgjAHXMd.js  requirementDiagram-MIRIMTAZ-Ci-GtR8L.js  sankeyDiagram-Y46BX6SQ-CEOQL9xO.js  sequenceDiagram-G6AWOVSC-XWrLuzg1.js  stateDiagram-MAYHULR4-BU3EtDOF.js  stateDiagram-v2-4JROLMXI-CaYJFnxU.js  timeline-definition-U7ZMHBDA-D4lgwR-N.js  xychartDiagram-6QU3TZC5-CREhKZeK.js
demo/: .env.production  .gitignore  CollectMind_Interview_Deck.pptx  INTERVIEW_RUNBOOK.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: DECISIONS.md  PROJECT_STATE.md  README.md  TASKS.md
recordings/: index.json
scripts/: build_qwen_gguf.py  check_log_pii.py  check_no_todo_fixme.py  check_openapi_types_diff.py  check_runbook_completeness.py  check_secrets.py  check_slm_pinning.py  dev_issue_jwt.py  fetch_qwen2.5_weights.py  fetch_vss_v6.0.py  local_webhook.py  verify_slm_manifest.py  (+1 more)
(+361 files in other folders)
