[project]
name = "collectmind"
version = "0.1.0"
description = "Agentic vehicle telemetry collection policy engine"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.11.9"
authors = [{ name = "Arun Veligatla", email = "arun.veligatla@gmail.com" }]

dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "langgraph==0.2.62",
  "httpx==0.28.1",
  "structlog==24.4.0",
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "opentelemetry-exporter-otlp==1.29.0",
  "opentelemetry-instrumentation-fastapi==0.50b0",
  "opentelemetry-instrumentation-asyncpg==0.50b0",
  "opentelemetry-instrumentation-aiokafka==0.50b0",
  "opentelemetry-instrumentation-redis==0.50b0",
  "PyJWT==2.10.1",
  "cryptography==44.0.0",
  "outlines==1.2.13",
  "ulid-py==1.1.0",
  "asyncpg==0.30.0",
  "redis==5.2.1",
  "aiokafka==0.12.0",
  "uvicorn[standard]==0.34.0",
  "pyyaml==6.0.2",
  "python-multipart==0.0.20",
  "prometheus-client==0.21.1",
]

[project.optional-dependencies]
gpu = ["vllm==0.20.1"]
cpu = ["llama-cpp-python==0.3.5"]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "pytest-cov==6.0.0",
  "hypothesis==6.122.6",
  "schemathesis==3.39.5",
  "locust==2.32.5",
  "testcontainers[postgres,redis,kafka]==4.9.0",
  "ruff==0.8.6",
  "mypy==1.14.1",
  "bandit==1.8.0",
  "pip-audit==2.7.3",
  "types-PyYAML==6.0.12.20241230",
  "respx==0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collectmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config --cov=src/collectmind --cov-report=term --cov-report=xml --cov-fail-under=85"
markers = [
  "integration: end-to-end tests that hit the real local stack",
  "contract: contract-tier tests (schemathesis fuzz + endpoint shape) — feature 002 onward",
]

[tool.coverage.run]
branch = true
source = ["src/collectmind"]
omit = ["*/migrations/*", "*/__main__.py"]
